# motive

./: README.rst  pyproject.toml
motive/: __init__.py  context.py  dump_signature.py  exceptions.py  insert_arguments.py  itr.py  nest.py  properties.py  run.py  runner.py  runner_context.py
tests/: t_runner.py  test_argument_inserter.py  test_dump_signature.py  test_insert_arguments.py  test_itr.py  test_motive.py  test_run.py  test_runner.py
